Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoStaticAbstract.java
/*
 * @test /nodynamiccopyright/
 * @bug 8022322
 * @summary Static methods are not allowed in an annotation.
 * @compile/fail/ref=NoStaticAbstract.out -XDrawDiagnostics NoStaticAbstract.java
 */

@interface NoStaticAbstract {
    static int m();
}
