Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoStaticAbstract.out
NoStaticAbstract.java:9:16: compiler.err.mod.not.allowed.here: static
1 error
